--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ finterion = "0.8.6"
 
 [tool.poetry.group.test.dependencies]
 coverage= "7.4.2"
+flake8 = "7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
