--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "finterion-investing-algorithm-framework"
 version = "v0.14.1"
-description = "This is the official plugin for the investing algorithm framework open source project."
+description = "This is the official finterion plugin for the investing algorithm framework open source project."
 authors = ["Marc van Duyn <marc@finterion.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-investing-algorithm-framework = "^3.2.0"
+investing-algorithm-framework = "^3.3.1"
 finterion = "^0.8.8"
 
 [tool.poetry.group.test.dependencies]
